--- a/app/src/main/res/layout/activity_detail_lelang.xml
+++ b/app/src/main/res/layout/activity_detail_lelang.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/brownlight"
+    android:layout_height="match_parent"
+    android:background="@color/green1"
     android:orientation="vertical"
     tools:context=".activity.DetailLelangActivity">
 
@@ -33,7 +33,7 @@
                 android:text="Harga Mulai"
                 android:textSize="20dp"
                 android:textStyle="bold"
-                android:textColor="#000000"
+                android:textColor="@color/white"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="5dp" />
             <TextView
@@ -53,13 +53,13 @@
                 android:padding="15dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:background="@drawable/detaillelasset_a">
+                android:background="@drawable/homeasset_e">
                 <TextView
                     android:id="@+id/txtdet1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Tambahan Pelelang :"
-                    android:textColor="#000000"
+                    android:textColor="@color/green1"
                     android:textStyle="bold"
                     android:layout_marginBottom="5dp"/>
                 <TextView
@@ -67,6 +67,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/txtdet1"
+                    android:textColor="@color/green1"
                     android:layout_marginBottom="15dp"/>
 
                 <TextView
@@ -74,7 +75,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Hewan :"
-                    android:textColor="#000000"
+                    android:textColor="@color/green1"
                     android:textStyle="bold"
                     android:layout_marginBottom="5dp"
                     android:layout_below="@id/txt_leldetcomment"/>
@@ -84,6 +85,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="15dp"
                     android:textSize="20dp"
+                    android:textColor="@color/green1"
                     android:layout_below="@id/txtdet2"/>
 
                 <TextView
@@ -91,7 +93,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Pelelang :"
-                    android:textColor="#000000"
+                    android:textColor="@color/green1"
                     android:textStyle="bold"
                     android:layout_marginBottom="5dp"
                     android:layout_below="@id/txt_leldethewan"/>
@@ -101,6 +103,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="15dp"
                     android:textSize="20dp"
+                    android:textColor="@color/green1"
                     android:layout_below="@+id/txtdet3"/>
 
             </RelativeLayout>
@@ -112,7 +115,13 @@
                     android:id="@+id/tmp_idlelang"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/brownlight"/>
+                    android:textColor="@color/green1"/>
+
+                <TextView
+                    android:id="@+id/tmp_idlelbrjalan"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/green1"/>
 
                 <TextView
                     android:id="@+id/tmp_idhewan"
@@ -120,7 +129,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_toRightOf="@id/tmp_idlelang"
-                    android:textColor="@color/brownlight"/>
+                    android:textColor="@color/green1"/>
 
                 <TextView
                     android:id="@+id/tmp_idpelelang"
@@ -128,7 +137,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_toRightOf="@id/tmp_idhewan"
-                    android:textColor="@color/brownlight"/>
+                    android:textColor="@color/green1"/>
 
                 <TextView
                     android:id="@+id/tmp_iduser"
@@ -136,17 +145,18 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_toRightOf="@id/tmp_idpelelang"
-                    android:textColor="@color/brownlight"/>
+                    android:textColor="@color/green1"/>
             </RelativeLayout>
             <Button
                 android:id="@+id/btn_daftarlel"
-                android:layout_width="100dp"
+                android:layout_width="150dp"
                 android:layout_height="60dp"
                 android:layout_centerHorizontal="true"
                 android:text="Daftar"
                 android:textStyle="bold"
+                android:textColor="@color/white"
                 android:layout_marginTop="40dp"
-                android:background="@drawable/signasset_c"
+                android:background="@drawable/btnasset"
                 android:layout_below="@id/detRellay"/>
 
             <Button
