--- a/app/src/main/res/layout/activity_add_lelang.xml
+++ b/app/src/main/res/layout/activity_add_lelang.xml
@@ -9,6 +9,7 @@
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
     android:orientation="vertical"
+    android:background="@color/green1"
     tools:context=".activity.AddLelangActivity">
 
     <ScrollView
@@ -24,7 +25,7 @@
                 android:layout_height="30dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginLeft="10dp"
-                android:src="@drawable/ic_baseline_arrow_back_ios_24"/>
+                android:src="@drawable/ic_baseline_arrowwhite_24"/>
             <TextView
                 android:layout_width="240dp"
                 android:layout_height="100dp"
@@ -33,8 +34,9 @@
                 android:layout_gravity="center"
                 android:textSize="25sp"
                 android:textStyle="bold"
-                android:textColor="#000000"
+                android:textColor="#FFFFFF"
                 android:layout_marginLeft="70dp"/>
+
             <LinearLayout
                 android:id="@+id/lelang1"
                 android:layout_width="match_parent"
@@ -49,13 +51,14 @@
                     android:text="UserId :"
                     android:textStyle="bold"
                     android:textSize="20dp"
-                    android:textColor="#000000"/>
+                    android:textColor="@color/green1"/>
                 <TextView
                     android:id="@+id/txtTextuserId"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
                     android:hint="Enter id "
                     android:inputType="text"
+                    android:textColor="@color/green1"
                     android:layout_marginBottom="20dp"/>
 
                 <TextView
@@ -64,7 +67,7 @@
                     android:text="HewanId :"
                     android:textSize="20dp"
                     android:textStyle="bold"
-                    android:textColor="#000000"/>
+                    android:textColor="@color/green1"/>
                 <Spinner
                     android:id="@+id/spinHewanId"
                     android:layout_width="match_parent"
@@ -79,7 +82,7 @@
                     android:text="Tambahan Pelelang :"
                     android:textSize="20dp"
                     android:textStyle="bold"
-                    android:textColor="#000000"/>
+                    android:textColor="@color/green1"/>
                 <EditText
                     android:id="@+id/editTextcomment"
                     android:layout_width="match_parent"
@@ -94,7 +97,7 @@
                     android:text="Harga :"
                     android:textSize="20dp"
                     android:textStyle="bold"
-                    android:textColor="#000000"/>
+                    android:textColor="@color/green1"/>
                 <EditText
                     android:id="@+id/editTextharga"
                     android:layout_width="match_parent"
@@ -108,12 +111,13 @@
                 android:id="@+id/btn_addlelang"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:text="Tambah Lelang"
+                android:layout_marginLeft="60dp"
+                android:layout_marginRight="60dp"
+                android:text="Ajukan Lelang"
                 android:textStyle="bold"
+                android:textColor="@color/white"
                 android:layout_below="@id/lelang1"
-                android:background="@color/brownlight"
+                android:background="@drawable/btnasset"
                 android:layout_marginTop="50dp"/>
         </RelativeLayout>
     </ScrollView>
