--- a/app/src/main/res/layout/activity_lelang_result.xml
+++ b/app/src/main/res/layout/activity_lelang_result.xml
@@ -21,20 +21,43 @@
             <RelativeLayout
                 android:id="@+id/rellayPemenang"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="150dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
                 android:padding="15dp"
                 android:background="@drawable/signasset_c">
                 <TextView
+                    android:id="@+id/txt_result1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="40dp"
                     android:text="Username :"
-                    android:textColor="#000000"
+                    android:textColor="@color/green1"
                     android:textStyle="bold"
-                    android:textSize="20dp"/>
+                    android:textSize="16dp"/>
+                <EditText
+                    android:id="@+id/rslt_namapemenang"
+                    android:layout_width="290dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="none"
+                    android:layout_below="@+id/txt_result1"/>
+                <TextView
+                    android:id="@+id/txt_result2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="40dp"
+                    android:text="Nilai Akhir :"
+                    android:textColor="@color/green1"
+                    android:textStyle="bold"
+                    android:textSize="16dp"
+                    android:layout_below="@id/rslt_namapemenang"/>
+                <EditText
+                    android:id="@+id/rslt_nilaiakhir"
+                    android:layout_width="290dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="none"
+                    android:layout_below="@+id/txt_result2"/>
             </RelativeLayout>
 
             <RelativeLayout
@@ -49,7 +72,7 @@
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
                     android:text="Pemenang"
-                    android:textColor="#000000"
+                    android:textColor="@color/green1"
                     android:textStyle="bold"
                     android:textSize="20dp"/>
             </RelativeLayout>
@@ -65,13 +88,20 @@
                 android:background="@drawable/signasset_c"
                 android:layout_below="@id/rellayPemenang">
                 <TextView
+                    android:id="@+id/txt_result8"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="40dp"
                     android:text="Username :"
-                    android:textColor="#000000"
+                    android:textColor="@color/green1"
                     android:textStyle="bold"
-                    android:textSize="20dp"/>
+                    android:textSize="16dp"/>
+                <EditText
+                    android:id="@+id/rslt_namapelelang"
+                    android:layout_width="290dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="none"
+                    android:layout_below="@+id/txt_result8"/>
             </RelativeLayout>
 
             <RelativeLayout
@@ -87,9 +117,9 @@
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
                     android:text="Pelelang"
-                    android:textColor="#000000"
+                    android:textColor="@color/green1"
                     android:textStyle="bold"
-                    android:textSize="20dp"/>
+                    android:textSize="16dp"/>
             </RelativeLayout>
 
             <TextView
@@ -101,7 +131,7 @@
                 android:textStyle="bold"
                 android:textColor="@color/white"
                 android:layout_marginTop="25dp"
-                android:layout_marginLeft="60dp"/>
+                android:layout_marginLeft="70dp"/>
 
             <TextView
                 android:id="@+id/reslt_messageId"
@@ -140,12 +170,16 @@
 
             <Button
                 android:id="@+id/reslt_tohome"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="120dp"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
                 android:layout_marginTop="30dp"
                 android:layout_below="@id/rellayPelelang"
-                android:text="ke menu"/>
+                android:text="ke menu"
+                android:layout_marginRight="50dp"
+                android:layout_marginLeft="50dp"
+                android:textColor="@color/white"
+                android:background="@drawable/btnasset"
+                android:layout_centerHorizontal="true"/>
         </RelativeLayout>
     </ScrollView>
 
