--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/green1"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -32,13 +33,14 @@
     <RelativeLayout
         android:id="@+id/rl_two"
         android:layout_width="30dp"
-        android:layout_height="450dp"
+        android:layout_height="400dp"
         android:background="@drawable/signupasset_b"
         android:layout_below="@+id/rl_one"/>
     <RelativeLayout
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:background="@drawable/signasset_c"
+        android:backgroundTint="@color/green1"
         android:layout_marginTop="105dp"
         android:layout_marginLeft="20dp">
         <TextView
@@ -47,7 +49,8 @@
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
             android:textSize="20dp"
-            android:text="SIGNUP PAGE"
+            android:text="Sign Up Page"
+            android:textColor="@color/white"
             android:textStyle="bold"
             android:gravity="center_horizontal" />
     </RelativeLayout>
@@ -63,6 +66,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Enter name "
+            android:textColor="@color/white"
             android:inputType="text" />
 
         <EditText
@@ -70,6 +74,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Enter email "
+            android:textColor="@color/white"
             android:inputType="textEmailAddress" />
 
         <EditText
@@ -77,6 +82,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Enter password "
+            android:textColor="@color/white"
             android:inputType="textPassword" />
 
         <Button
