--- a/app/src/main/res/layout/activity_wallet.xml
+++ b/app/src/main/res/layout/activity_wallet.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/brown"
+    android:background="@color/green1"
     tools:context=".activity.WalletActivity">
 
     <ScrollView
@@ -80,7 +80,7 @@
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@color/brown"
+                android:background="@color/green1"
                 android:layout_below="@id/garis_topup">
                 <Button
                     android:id="@+id/btntmbh_a"
