--- a/app/src/main/res/layout/lelbyhewansapi_layout.xml
+++ b/app/src/main/res/layout/lelbyhewansapi_layout.xml
@@ -20,7 +20,7 @@
             android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Harga Awal:"
+            android:text="Harga:"
             android:textColor="#000000"
             android:textStyle="bold"
             android:textSize="20dp"/>
@@ -30,14 +30,14 @@
             android:layout_marginLeft="125dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Harga Awal"
+            android:text="id as peserta"
             android:textSize="18dp"/>
         <TextView
             android:layout_marginTop="70dp"
             android:layout_marginLeft="110dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Tambahan Pelelang"
+            android:text="lelang yg di ikuti"
             android:textColor="#000000"
             android:textStyle="bold"
             android:textSize="10dp"/>
@@ -47,7 +47,7 @@
             android:layout_marginLeft="110dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Tambahan Pelelang"
+            android:text="lelang yg di ikuti"
             android:textSize="12dp" />
         <TextView
             android:id="@+id/idsapi"
