--- a/app/src/main/res/layout/activity_detailtransaksi_lelang.xml
+++ b/app/src/main/res/layout/activity_detailtransaksi_lelang.xml
@@ -48,6 +48,26 @@
                     android:layout_height="wrap_content"
                     android:inputType="none"
                     android:layout_below="@+id/txt_result1"/>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/rellaydettrans"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/rellayPemenang"
+                android:layout_marginTop="30dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:padding="15dp"
+                android:background="@drawable/signasset_c">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:text="Nominal Bayar"
+                    android:textColor="@color/green1"
+                    android:textStyle="bold"
+                    android:textSize="20dp"/>
                 <TextView
                     android:id="@+id/txt_result2"
                     android:layout_width="wrap_content"
@@ -56,8 +76,7 @@
                     android:text="Nilai Akhir :"
                     android:textColor="@color/green1"
                     android:textStyle="bold"
-                    android:textSize="16dp"
-                    android:layout_below="@id/rslt_namapemenang"/>
+                    android:textSize="16dp"/>
                 <EditText
                     android:id="@+id/rslt_nilaiakhir"
                     android:layout_width="290dp"
@@ -66,16 +85,17 @@
                     android:layout_below="@+id/txt_result2"/>
             </RelativeLayout>
 
+
             <RelativeLayout
                 android:id="@+id/rellayPelelang"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="30dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
                 android:padding="15dp"
                 android:background="@drawable/signasset_c"
-                android:layout_below="@id/rellayPemenang">
+                android:layout_below="@id/rellaydettrans">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -112,6 +132,7 @@
                 android:textColor="@color/white"
                 android:layout_marginTop="25dp"
                 android:layout_marginLeft="80dp"/>
+
             <TextView
                 android:id="@+id/txtdetrasn2_lel"
                 android:layout_width="wrap_content"
@@ -135,11 +156,6 @@
                 android:layout_height="wrap_content"/>
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="User :"/>
-
-            <TextView
                 android:id="@+id/reslt_userName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
@@ -150,12 +166,30 @@
                 android:layout_height="wrap_content"/>
 
             <TextView
+                android:id="@+id/imgkey"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="User :"/>
+                android:layout_height="wrap_content"/>
 
             <TextView
                 android:id="@+id/reslt_pelelangName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/txtidstatold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/txtidstatnew"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/txtstatold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/txtstatnew"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
@@ -166,8 +200,9 @@
                 android:layout_marginLeft="120dp"
                 android:layout_marginTop="30dp"
                 android:layout_below="@id/rellayPelelang"
-                android:text="ke menu"/>
-
+                android:background="@drawable/btnasset"
+                android:textColor="@color/white"
+                android:text="Submit"/>
             <ImageView
                 android:id="@+id/btn_backreqlist"
                 android:layout_width="25dp"
