--- a/app/src/main/res/layout/activity_groupchat.xml
+++ b/app/src/main/res/layout/activity_groupchat.xml
@@ -10,8 +10,58 @@
             android:id="@+id/rv_messagelist"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_above="@id/input_linlayout">
+            android:layout_above="@id/input_linlayout"
+            android:layout_below="@id/gcRelLay">
         </androidx.recyclerview.widget.RecyclerView>
+
+    <RelativeLayout
+        android:id="@+id/gcRelLay"
+        android:layout_width="match_parent"
+        android:layout_height="140dp"
+        android:background="@drawable/reqlelasset_a"
+        android:padding="10dp">
+        <TextView
+            android:id="@+id/txt1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Hewan yang dilelangkan saat ini :"
+            android:textColor="@color/green3"
+            android:textSize="15sp"/>
+        <TextView
+            android:id="@+id/txt2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Harga Awal :"
+            android:textColor="@color/green3"
+            android:textSize="15sp"
+            android:layout_below="@id/txt1"/>
+        <TextView
+            android:id="@+id/txtgc_hargaawal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/green3"
+            android:textSize="15sp"
+            android:layout_marginLeft="5dp"
+            android:layout_below="@id/txt1"
+            android:layout_toRightOf="@id/txt2"/>
+        <TextView
+            android:id="@+id/txtgcid"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:textColor="@color/green3"
+            android:textSize="15sp"
+            android:layout_below="@id/txt1"/>
+        <TextView
+            android:id="@+id/timer_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="00:30"
+            android:textColor="@color/green3"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:textSize="45sp"/>
+    </RelativeLayout>
 
     <Button
         android:id="@+id/bid_satu"
@@ -44,14 +94,6 @@
         android:orientation="horizontal"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true">
-
-        <TextView
-            android:id="@+id/timer_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="00:30"
-            android:textSize="20sp"
-            android:layout_marginLeft="150dp"/>
     </LinearLayout>
 
 </RelativeLayout>
